Add ignore file

--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,6 @@
 development:
   email: johndoe@me.com
   tracker: ./forgitful/dircontents.txt
+  forgitignore: /patho/to/git/forgitful/forgitignore
   repos:
     - $HOME/Documents
